Replace placeholder text with real text

--- a/view/index.html
+++ b/view/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
   <body>
-    <h1>What is Maximum Lmao?</h1>
+    <h1>When is it really Shebly O'Clock?</h1>
     <table>
       <tr id="headers"></tr>
       <tr id="data"></tr>
