--- a/view/index.html
+++ b/view/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" type="text/css" href="../stylesheet.css">
   </head>
